--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span>WIFI密码：</span><input id="passwd" placehoder="WIFI 密码">
             </div>
             <div class="row">
-            <span>加密方式：</span><input id="secure" placehoder="WIFI 加密方式">
+            <span>加密方式：</span><input id="secure" placehoder="WIFI 加密方式" value="WPA">
             </div>
             <textarea class="res-info" id="wifilist">提示：首先请打开本网页后长按5s音箱上方按钮至白光闪烁，然后将本设备联接到音箱自带的WIFI热点上（一般为@PHICOMM_开头），最后在这里扫描并输入相关信息进行配网(注，加密方式一般填写WPA)</textarea>
             <button onclick="loopx()">开始配网</button>
